# mwb-linux-bridge

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
agent-workstreams/: README.md  antigravity-verification.md  claude-tui-packaging.md  codex-rust-core.md  codex-validation.md  model-routing.md
flatpak/: README.md  build-flatpak.sh  dev.benm.MwbLinuxBridge.desktop  dev.benm.MwbLinuxBridge.metainfo.xml  dev.benm.MwbLinuxBridge.yml  mwb-linux-bridge-gui-flatpak.sh
gui/: package-lock.json  package.json
gui/packaging/: mwb-linux-bridge-gui.desktop  mwb-linux-bridge-gui.spec
gui/scripts/: build-rpm.sh
gui/src/: main.js  preload.js
gui/src/lib/: config.js  runtime.js
gui/src/renderer/: app.js  index.html  styles.css
gui/test/: config.test.js  runtime.test.js
packaging/: 90-mwb-client-uinput.rules  README.Fedora.md  config.example  install-uinput-rule.sh  mwb-linux-bridge.spec
scripts/: deploy-agents.sh  extract-agent-usage.py  route-agent-task.sh  watch-agent-usage.sh
src/: CryptoHelper.cpp  CryptoHelper.h  InputManager.cpp  InputManager.h  NetworkManager.cpp  NetworkManager.h  Protocol.h  main.cpp
tui/: mwb-tui
